--- a/css/style.css
+++ b/css/style.css
@@ -30,15 +30,15 @@ body {
 display: none;
 }
 
-#AcronymInput {
-height: 100px;
-font-size: 32px;
-font-family: 'Courier', monospace;
-margin-bottom: 20px;
-text-align: center;
-max-width: 60%;
-text-transform: uppercase;
-color: #000;
+#SheetID {
+  height: 50px;
+  width: 500px;
+  font-size: 12px;
+  font-family: 'Courier', monospace;
+  text-align: center;
+  max-width: 100%;
+  text-transform: uppercase;
+  color: #000;
 }
 
 @media only screen and (max-width: 500px) {
@@ -58,8 +58,13 @@ margin: 30px 0px 10px 0px;
 background-color: #e22967;
 border: none;
 }
-.btn:hover, .btn:active, .btn:focus, .btn:visited, #random:active {
+
+.btn:hover, .btn:active, .btn:focus, .btn:visited, #random:active, #random[disabled]:hover {
 background-color: #ec598a;
+}
+
+.btn:disabled {
+  background-color: #ccc;
 }
 
 .jumbotron h1, h2, h3, h4, h5, h6, p, input.btn {
@@ -98,14 +103,30 @@ color: #EEE;
 }
 
 #random {
-max-width: 60%;
-width: 420px;
-height: 40px;
-padding: 0px;
-font-size: 14px;
+  max-width: 60%;
+  width: 300px;
+  height: 80px;
+  font-size: 22px;
+  margin-bottom: 100px;
+  text-align: center;
+}
+
+ #newsheet {
+  width: 100px;
+  height: 50px;
+  font-size: 14px;
+  padding: 2px  ;
 }
 
 p#definition {
 font-size: 18px;
 font-style: italic;
+}
+
+h1 {
+  min-height: 55px;
+}
+
+h2 {
+  color: #7FFBF1;
 }
